fix: layout shifting in mobile device

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,3 +23,7 @@ body {
 p {
   @apply font-medium;
 }
+
+.about-image {
+  box-shadow: 17px 17px 0px -3px blue;
+}
